# 021agents.gt

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CHANGES_SUMMARY.md  CLEANUP_REVIEW.md  CLOUDFLARE_AGENTS_SDK_REVIEW.md  COMPOSABLE_ARCHITECTURE.md  CONTROL_PLANE_REDESIGN.md  Dockerfile  README.md  RECENT_COMMITS_SUMMARY.md  STREAMING_ARCHITECTURE.md  WORKFLOW_ANALYSIS.md  architecture-analysis.md  claude-progress.txt  database-architecture-recommendation.md  docker-compose.yml  feature_list.json  init.sh  portal-crud-implementation-plan.md  portal-definitive-blueprint.md  project_known_issues.md  pyproject.toml  rbac-gap-analysis.md
.claude/: reliability-audit.md
.postman/: resources.yaml
agent-harness/: 021agents-solution-overview.md  Dockerfile  GATEWAY_SPEC.md  README.md  agent-harness-investor-deck-2026.md  env.d.ts  index.html  package-lock.json  package.json  report-agent-harness-competitive-analysis-2026.md  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.jsonc.full
agentos/: __init__.py  agent.py  builder.py  cli.py  defaults.py  scheduler.py
agents/: code-reviewer.json  customer-support.json  data-analyst.json  dispatch-test-bot.json  orchestrator.json  personal-assistant.json  research-assistant.json
channels/: package.json  wrangler.jsonc
cli/: .npmignore  PARITY_AUDIT.md  PUBLISH.md  README.md  READY_FOR_PUBLISH.md  bunfig.toml  package-lock.json  package.json  tsconfig.json
compute/: package-lock.json  package.json  wrangler.jsonc
config/: default.json
control-plane/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.staging.jsonc
data/: codemap.json
deploy/: package.json  (+8 more)
(+1984 files in other folders)
