[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "AgentOS: The Composable Autonomous Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "qrcode[pil]>=7.4",
    "pydantic>=2.0",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "websockets>=12.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
yaml = [
    "pyyaml>=6.0",
]
sandbox = [
    "e2b>=1.0",
    "e2b-code-interpreter>=1.0",
]
postgres = [
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
]

[project.scripts]
agentos = "agentos.cli:main"

[tool.setuptools.packages.find]
include = ["agentos*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
